Minor copy change

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@ By Jacob Joaquin</p>
 <p><em>"Enable users to process and generate Csound orchestras and scores
 quickly, easily and efficiently."</em></p>
 
-<h2>Quick Installation Instructions</h2>
+<h2>Quick Installation Instructions for Unix / Mac OS X Terminal</h2>
 
 <p>To install, clone from git and run setup.</p>
 
-<pre><code>$ git clone git://github.com/jacobjoaquin/csd.git
-$ cd csd
-$ python setup.py install
+<pre><code>git clone git://github.com/jacobjoaquin/csd.git
+cd csd
+python setup.py install
 </code></pre>
 
 <h2>About</h2>
