Added preview link to sphinx docs

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@ needs to make this happen. I'm open to any and all ideas from anyone.</p>
 <p>This package is currently still very early in the development cycle,
 though quickly approaching a beta release.  The scripts have been tested
 primarily with Apple's Python 2.5.1.</p>
+
+<p>Preview of the documentation can be <a href="docs/index.html">read here</a></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/jacobjoaquin">jacobjoaquin</a></p>
@@ -91,6 +93,7 @@ primarily with Apple's Python 2.5.1.</p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
