--- a/index.html
+++ b/index.html
@@ -216,9 +216,21 @@ needs to make this happen. I&#8217;m open to any and all ideas from anyone.</p>
         <li><a href="#">csd 0.0.5 alpha documentation</a> &raquo;</li> 
       </ul>
     </div>
+
     <div class="footer">
         &copy; Copyright 2009, Jacob Joaquin.
       Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
     </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-39733073-1', 'github.com');
+  ga('send', 'pageview');
+
+</script>
+
   </body>
 </html>
