Started minor layout changes in docs

--- a/_doc_source/source/_templates/layout.html
+++ b/_doc_source/source/_templates/layout.html
@@ -15,3 +15,21 @@
 {% endblock %}
 
 {% set css_files = css_files + ["_static/custom.css"] %}
+
+{% block sidebarlogo %}
+{% endblock %}
+
+{% block sidebar1 %}
+{{ sidebar() }}
+{% endblock %}
+
+{% block sidebar2 %}
+{% endblock %}
+
+{% block relbar1 %}
+
+<div style="background-color: white; text-align: left; padding: 10px 10px 15px 15px">
+<a href="{{ pathto('index') }}">THIS IS WHERE THE IMAGE GOES</a>
+</div>
+{{ super() }}
+{% endblock %}
