--- a/amen_tutorial.html
+++ b/amen_tutorial.html
@@ -141,7 +141,7 @@ environments, PythonScore is non-imposing and does its best to get
 out of the way rather than to impose a strict set of rules for
 composition. Classical Csound score is fully supported, all of
 Python 2.7 is available, and composers can pick and choose their
-score tools <em>à la carte</em> as the see fit.</p>
+score tools <em>à la carte</em> as they see fit.</p>
 <p>This purpose of this tutorial is to try and prove the merits of
 using the Python language in favor of the classical Csound score.
 The classical score is a fixed system while Python is a very mature
