--- a/commandline.html
+++ b/commandline.html
@@ -189,10 +189,10 @@ i 1 + .    0.444  .</pre>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-39733073-1', 'github.com');
+  ga('create', 'UA-39733073-1', 'github.io');
   ga('send', 'pageview');
 
 </script>
 
   </body>
-</html>
+</html>>
