--- a/demo/index.html
+++ b/demo/index.html
@@ -473,7 +473,7 @@ i 1 + . 0.8 7.05</pre>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-39733073-1', 'github.com');
+  ga('create', 'UA-39733073-1', 'github.io');
   ga('send', 'pageview');
 
 </script>
