--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@ needs to make this happen. I&#8217;m open to any and all ideas from anyone.</p>
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-39733073-1', 'github.com');
+  ga('create', 'UA-39733073-1', 'github.io');
   ga('send', 'pageview');
 
 </script>
 
   </body>
-</html>
+</html>>
