--- a/pysco.html
+++ b/pysco.html
@@ -181,10 +181,10 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-39733073-1', 'github.com');
+  ga('create', 'UA-39733073-1', 'github.io');
   ga('send', 'pageview');
 
 </script>
 
   </body>
-</html>
+</html>>
