--- a/amen_tutorial.html
+++ b/amen_tutorial.html
@@ -142,7 +142,7 @@ out of the way rather than to impose a strict set of rules for
 composition. Classical Csound score is fully supported, all of
 Python 2.7 is available, and composers can pick and choose their
 score tools <em>à la carte</em> as they see fit.</p>
-<p>This purpose of this tutorial is to try and prove the merits of
+<p>The purpose of this tutorial is to try and prove the merits of
 using the Python language in favor of the classical Csound score.
 The classical score is a fixed system while Python is a very mature
 and highly extensible language with a vast collection of first and
@@ -1214,4 +1214,4 @@ also be used to bring greater clarity to the score.</p>
 </script>
 
   </body>
-</html>>
+</html>>>
