--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <link rel="top" title="CSD" href="../index.html" />
     <link rel="next" title="Command-line Operations" href="../commandline.html" />
-    <link rel="prev" title="Amen Break PythonScore Tutorial" href="../amen_tutorial.html" /> 
+    <link rel="prev" title="PythonScore Change Log" href="../pythonscore/change_log.html" /> 
   </head>
   <body>
     <div class="related">
@@ -44,7 +44,7 @@
           <a href="../commandline.html" title="Command-line Operations"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../amen_tutorial.html" title="Amen Break PythonScore Tutorial"
+          <a href="../pythonscore/change_log.html" title="PythonScore Change Log"
              accesskey="P">previous</a> |</li>
         <li><a href="../index.html">CSD</a> &raquo;</li> 
       </ul>
@@ -74,8 +74,8 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../amen_tutorial.html"
-                        title="previous chapter">Amen Break PythonScore Tutorial</a></p>
+  <p class="topless"><a href="../pythonscore/change_log.html"
+                        title="previous chapter">PythonScore Change Log</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../commandline.html"
                         title="next chapter">Command-line Operations</a></p>
@@ -457,7 +457,7 @@ i 1 + . 0.8 7.05</pre>
           <a href="../commandline.html" title="Command-line Operations"
              >next</a> |</li>
         <li class="right" >
-          <a href="../amen_tutorial.html" title="Amen Break PythonScore Tutorial"
+          <a href="../pythonscore/change_log.html" title="PythonScore Change Log"
              >previous</a> |</li>
         <li><a href="../index.html">CSD</a> &raquo;</li> 
       </ul>
