Bootstrap-ified Sphinx Docs

--- a/_doc_source/source/_templates/layout.html
+++ b/_doc_source/source/_templates/layout.html
@@ -14,7 +14,8 @@
 </script>
 {% endblock %}
 
-{% set css_files = css_files + ["_static/custom.css"] %}
+<!-- {% set css_files = css_files + ["_static/custom.css"] %} -->
+{% set css_files = css_files  %}
 
 {% block sidebarlogo %}
 <h3>Get CSD</h3>
